fix: grammar and gapping on form

--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -40,6 +40,7 @@
     display: flex;
     align-self: center;
     justify-content: flex-start;
+    gap: 4px;
 
     padding: 8px;
 
@@ -92,7 +93,8 @@
     margin: 32px 0;
     position: relative;
     width: 100%;
-    gap: 3px;
+    gap: 4px;
+    
     display: flex;
   }
   
